<resources>
    <string name="app_name">midterm</string>
    <string name="username">账号：</string>
    <string name="nickname">昵称：</string>
    <string name="password">密码：</string>
    <string name="passwordAgain">再次输入密码：</string>
    <string name="register">注册</string>
    <string name="cancel">取消</string>
    <string name="is_save">是否保存密码</string>
    <string name="login">登录</string>
</resources>